--- a/laba1.vcxproj
+++ b/laba1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{9c5776c9-c565-41fc-a5c2-773abf1e7510}</ProjectGuid>
     <RootNamespace>laba1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>laba</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
